Fix  LayoutTests/canvas/philip/tests/2d.text.draw.space.collapse.nonspace.html https://bugs.webkit.org/show_bug.cgi?id=92974

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-08-14
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Replace space characters by U+0020 SPACE characters in
CanvasRenderingContext2D::drawTextInternal() in order to
comply with the HTML Canvas 2D Context specification:
- http://www.w3.org/TR/2dcontext/#drawing-text-to-the-canvas

No new tests, already tested by canvas/philip/tests/2d.text.draw.space.collapse.nonspace.html.

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::replaceCharacterInString):
(WebCore):
(WebCore::CanvasRenderingContext2D::drawTextInternal):

LayoutTests:

Unskip canvas/philip/tests/2d.text.draw.space.collapse.nonspace.html for
all the ports now that space characters are correctly replaced in
the text passed to fillText() and strokeText().

* platform/chromium/TestExpectations:
* platform/efl/Skipped:
* platform/gtk/TestExpectations:
* platform/mac/canvas/philip/tests/2d.text.draw.space.collapse.nonspace-expected.txt: Removed.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/111843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125575 268f45cc-cd09-0410-ab3c-d52691b4dbfc